# Bakery

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  bakery-config.example.toml
openspec/changes/enhance-terminal-ui/: proposal.md  tasks.md
openspec/changes/enhance-terminal-ui/specs/terminal-output/: spec.md
src/: api.rs  config.rs  filesystem.rs  main.rs  models.rs  openspec.rs
src/ui/: badge.rs  card.rs  dashboard.rs  format.rs  mod.rs  progress.rs  terminal.rs  theme.rs
