[package]
name = "bakery-devops"
version = "0.2.1"
edition = "2021"
authors = ["Kyle Edward Donaldson <kyle@ked.dev>"]
description = "Azure DevOps work item scraper with OpenSpec integration"
license = "MIT"
repository = "https://github.com/KyleEdwardDonaldson/bakery"
homepage = "https://github.com/KyleEdwardDonaldson/bakery"
documentation = "https://github.com/KyleEdwardDonaldson/bakery#readme"
keywords = ["azure", "devops", "scraper", "openspec", "cli"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream", "native-tls"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scraper = "0.17"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive"] }
url = "2.3"
regex = "1.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4"] }
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
base64 = "0.21"
rand = "0.8"
toml = "0.8"
colored = "2.1"
indicatif = "0.17"

[[bin]]
name = "bakery"
path = "src/main.rs"

[[bin]]
name = "bakery-devops"
path = "src/main.rs"